WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263948
Fix layering violation in Frame::disconnectOwnerElement()
https://bugs.webkit.org/show_bug.cgi?id=263948
Summary
Fix layering violation in Frame::disconnectOwnerElement()
Charlie Wolfe
Reported
2023-10-30 22:07:31 PDT
Document should only be used from LocalFrame.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-30 22:07:45 PDT
<
rdar://problem/117721204
>
Charlie Wolfe
Comment 2
2023-10-30 22:08:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19760
EWS
Comment 3
2023-10-31 22:48:09 PDT
Committed
270042@main
(d20a6a213003): <
https://commits.webkit.org/270042@main
> Reviewed commits have been landed. Closing PR #19760 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug