Fix layering violation in Frame::disconnectOwnerElement() https://bugs.webkit.org/show_bug.cgi?id=263948 rdar://117721204

Reviewed by Pascoe.

Document should only be used from LocalFrame.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::frameWasDisconnectedFromOwner): Deleted.
* Source/WebCore/dom/Document.h:
* Source/WebCore/page/Frame.cpp:
(WebCore::Frame::disconnectOwnerElement):
* Source/WebCore/page/Frame.h:
(WebCore::Frame::frameWasDisconnectedFromOwner const):
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::frameWasDisconnectedFromOwner const):
* Source/WebCore/page/LocalFrame.h:

Canonical link: https://commits.webkit.org/270042@main